# thesis

./: CMakeLists.txt  muon.mac  vis.mac
include/: MyActionInitialization.hh  MyDetectorConstruction.hh  MyDetectorConstruction.hh~  MyEventAction.hh  MyPrimaryGeneratorAction.hh  MyRunAction.hh  MyStackingAction.hh  MySteppingAction.hh~  MySteppingVerbose.hh
src/: MyActionIntialization.cc  MyActionIntialization.cc~  MyDetectorConstruction.cc  MyDetectorConstruction.cc~  MyEventAction.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc  MyStackingAction.cc  MySteppingAction.cc  MySteppingAction.cc~  MySteppingVerbose.cc  deletelater.txt  sim1.cc  sim1.cc~
